<resources>

    <string name="app_name">Math Ninja</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_options">OptionsActivity</string>
    <string name="img_desc">Background image.</string>
    <string name="addition">Addition</string>
    <string name="subtraction">Subtraction</string>
    <string name="multiplication">Multiplication</string>
    <string name="division">Division</string>
    <string name="wrong">Wrong answer!</string>
    <string name="right">Right answer!</string>

</resources>