<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#fe0000" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        android:layout_marginRight="0dp"
        android:src="@drawable/ninja"
        android:contentDescription="@string/img_desc" />
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="0dp"
        android:text="@string/app_name"
        android:textColor="#ff000000"
        android:textSize="60sp"
        android:textStyle="bold"
        android:gravity="center_horizontal" />
          
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="match_parent"
	    android:animateLayoutChanges="true"	
	    android:layout_marginTop="180dp "    
	    android:id="@+id/container">	
	    
        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/ninjastar1"
            android:onClick="clickButton"
            android:text="@string/addition"
            android:textSize="25sp"
            android:textStyle="bold"
            android:visibility="visible" />
    
	    <Button
	        android:id="@+id/button2"
	        android:layout_width="match_parent"
	        android:layout_height="75dp"
	       	android:layout_marginTop="20dp"
	        android:onClick="clickButton"
	        android:text="@string/subtraction"
	        android:drawableLeft="@drawable/ninjastar1"
	        android:textSize="25sp"
	        android:textStyle = "bold"
	        android:visibility="visible" />
	
	    <Button
	        android:id="@+id/button3"
	        android:layout_width="match_parent"
	        android:layout_height="75dp"
			android:layout_marginTop="20dp"
	        android:onClick="clickButton"
	        android:text="@string/multiplication"
	        android:drawableLeft="@drawable/ninjastar1"
	        android:textSize="25sp"
	        android:textStyle = "bold"
	        android:visibility="visible" />
	    
	    <Button
	        android:id="@+id/button4"
	        android:layout_width="match_parent"
	        android:layout_height="75dp"
	        android:layout_marginTop="20dp"
	        android:onClick="clickButton"
	        android:text="@string/division"
	        android:drawableLeft="@drawable/ninjastar1"
	        android:textSize="25sp"
	        android:textStyle = "bold"
	        android:visibility="visible"  />
	    
	</LinearLayout>
	
</RelativeLayout>
